--- a/src/app/pages/myorders/myOrders.module.css
+++ b/src/app/pages/myorders/myOrders.module.css
@@ -1,11 +1,13 @@
 
-.ordersPage {
-  margin-top: 87px;
+.ordersPage,
+.loading {
+  margin-top: 75px;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 2rem;
-  height: 86vh; 
+  height: 89vh; 
+  margin-bottom: 5px;
   background-color: #fffefe;
   box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
   border-radius: 12px;
@@ -25,7 +27,7 @@
 .ordersScrollArea {
   width: 100%;
   max-width: 1200px;
-  height: 66vh; 
+  height: 76vh; 
   overflow-y: auto;
   padding: 20px 20px 10px 20px;
   border-radius: 10px;
@@ -97,7 +99,7 @@ box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
 }
 
 .loading{
-  margin-top: 87px;
+  /* margin-top: 75px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -109,7 +111,7 @@ box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
   width: 100%;
   max-width: 1300px; 
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto; */
       display: flex;
     justify-content: center;
     align-items: center;
@@ -152,12 +154,13 @@ box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
 }
 .error,
 .empty {
-  margin-top: 87px;
+  margin-top: 75px;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 2rem;
-  height: 86vh; 
+height: 89vh;
+margin-bottom: 5px;
   background-color: #fffefe;
   box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
   border-radius: 12px;
