--- a/src/app/profile/profile.module.css
+++ b/src/app/profile/profile.module.css
@@ -70,11 +70,13 @@
   width: 100%;
   flex-shrink: 0;
 }
-.loadingCuisine{
+.loading{
     height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
+      margin-left: auto;
+  margin-right: auto;
 }
 
 .loaderRing {
