--- a/src/app/components/orderonline/orderonline.module.css
+++ b/src/app/components/orderonline/orderonline.module.css
@@ -14,19 +14,17 @@ margin-bottom: 5px;
   width: 1300px;
   margin-left: auto;
   margin-right: auto;
-
 }
  .orderForm{
-  margin: 60px 50px 20px 50px;
+  padding: 60px 50px 20px 50px;
   border-radius: 10px;
-    height: 89vh;
   background-color: #f7fafc;
   color: #2d3748;
   font-family: 'Inter', sans-serif;
   overflow-x: hidden;
 }
 .loadingCuisine{
-    height: 89vh;
+    /* height: 89vh; */
     display: flex;
     justify-content: center;
     align-items: center;
